- finalizando configuração e migration